--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "firebase": "^9.18.0",
     "mongoose": "^6.7.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
