--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "serverless-http": "^3.1.1",
-    "uuid": "^9.0.0"
+    "swagger-ui-dist": "^4.18.2",
+    "uuid": "^9.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
