--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rxjs": "^7.2.0",
     "serverless-http": "^3.1.1",
     "swagger-ui-dist": "^4.18.2",
+    "swagger-ui-express": "^4.6.2",
     "uuid": "^9.0.0",
     "yamljs": "^0.3.0"
   },
