--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_URL='mongodb+srv://apistagetree:pdHIFZ1xdepZ9dDo@reaproducoes.k1mtkyn.mongodb.net/?retryWrites=true&w=majority'
+PASS=''
