--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/swagger": "^6.3.0",
+    "archiver": "^7.0.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "firebase": "^9.18.0",
+    "fs-extra": "^11.2.0",
     "mongoose": "^6.7.2",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
