--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "rxjs": "^7.2.0",
     "serverless-http": "^3.1.1",
     "uuid": "^9.0.1",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
